# rustOS

./: .gdbinit  .gdbinit_gui  .gitignore  .gitmodules  Cargo.toml  README.md  readme.md  x86_64-rustos-kernel.json
boot/kernel_stub/: Cargo.toml  build.rs
boot/kernel_stub/src/: main.rs  platform.rs
boot/kernel_stub/src/arch/: aarch64.rs  mod.rs  x86.rs
drivers/: Cargo.toml  build_drivers.ps1  x86_64-rustos-driver.json
drivers/.cargo/: config.toml
drivers/acpi/: Cargo.toml  Makefile.toml  build.rs
drivers/acpi/.cargo/: config.toml
drivers/acpi/src/: acpi.toml  aml.rs  dev_ext.rs  lib.rs  msvc_shims.rs  pdo.rs
drivers/base_driver/: Cargo.toml  build.rs
drivers/base_driver/.cargo/: config.toml
drivers/base_driver/src/: BASE.toml  include.rs  lib.rs  msvc_shims.rs
drivers/devicetree/: Cargo.toml
drivers/devicetree/src/: devicetree.toml  lib.rs
drivers/disk/: Cargo.toml  Makefile.toml  build.rs
drivers/disk/src/: disk.toml  lib.rs
drivers/fat32/: Cargo.toml  Makefile.toml  build.rs
drivers/fat32/.cargo/: config.toml
drivers/fat32/src/: block_dev.rs  control.rs  fat32.rs  fat32.toml  lib.rs  structs.rs  volume.rs
drivers/i8042/: Cargo.toml  Makefile.toml  build.rs
drivers/i8042/src/: i8042.rs  i8042.toml  lib.rs  msvc_shims.rs
drivers/ide/: Cargo.toml  Makefile.toml  build.rs
drivers/ide/src/: dev_ext.rs  ide.toml  lib.rs  msvc_shims.rs
drivers/mountmgr/: Cargo.toml  Makefile.toml  build.rs
drivers/mountmgr/src/: lib.rs  mountmgr.toml
drivers/partmgr/: Cargo.toml  Makefile.toml  build.rs
drivers/partmgr/src/: lib.rs  partmgr.toml
drivers/pci/: Cargo.toml  Makefile.toml  build.rs
drivers/pci/src/: dev_ext.rs  lib.rs  msix.rs  pci.toml
drivers/root/: Cargo.toml
drivers/root/src/: lib.rs  root.toml
drivers/targets/: x86_64-rustos-pe.json
drivers/virtio/: Cargo.toml  build.rs
drivers/virtio/src/: blk.rs  completion.rs  dev_ext.rs  dma_region.rs  io.rs  lib.rs  outstanding.rs  pci.rs  temp_benchmark.rs  virtio.toml  virtqueue.rs
drivers/volmgr/: Cargo.toml  Makefile.toml  build.rs
drivers/volmgr/src/: cache.rs  cache_core.rs  cache_traits.rs  lib.rs  request_pool.rs  volmgr.toml
drivers/volmgr/src/cache_core/: core.rs  flush.rs  mod.rs  notify.rs  page.rs
exe_test/driver_test/: Cargo.toml  build.rs
exe_test/driver_test/.cargo/: config.toml
exe_test/driver_test/src/: include.rs  lib.rs  msvc_shims.rs
exe_test/elf_test/: Cargo.toml  x86_64-pc-windows-raw.json
exe_test/elf_test/.cargo/: config.toml
exe_test/elf_test/src/: main.rs
kernel/: Cargo.toml  KRNL.DEF  build.rs  linker_trampoline.ld
kernel/.cargo/: config.toml
kernel/c/: mimalloc_rustos_platform.c  mimalloc_static.c  rustos_libc.c
kernel/c/include/: errno.h  pthread.h  stdio.h  stdlib.h  string.h  unistd.h  wchar.h
kernel/src/: ap_startup.asm  ap_startup.s  benchmarking.rs  bootstrap.rs  console.rs  cpu.rs  crt.rs  debug_metadata.rs  disk_profile.rs  exports.rs  gdt.rs  idt.rs  machine.rs  main.rs  object_manager.rs  platform.rs  registry.rs  static_handlers.rs  sync_platform.rs  util.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86/: cpu.rs  debug_meta.rs  gdt.rs  machine.rs  mod.rs  platform.rs  serial.rs
kernel/src/drivers/: ACPI.rs  driver_install.rs  interrupt_index.rs  kbd_driver.rs  mod.rs  pnp_manager.rs  timer_driver.rs
kernel/src/drivers/drive/: ahci_structs.rs  generic_drive.rs  gpt.rs  ide_disk_driver.rs  mod.rs  ram_disk.rs  sata_disk_drivers.rs  vfs.rs
kernel/src/drivers/pci/: device_collection.rs  mod.rs  pci_bus.rs
kernel/src/drivers/pnp/: device.rs  driver_index.rs  driver_object.rs  manager.rs  mod.rs  old.rs  pnp_manager.rs  request.rs
kernel/src/exception_handlers/: exception_handlers.rs  mod.rs
kernel/src/executable/: elf_parse.rs  launch_elf.rs  mod.rs  pe_loadable.rs  program.rs
kernel/src/file_system/: bootstrap_filesystem.rs  fat.rs  file.rs  file_provider.rs  file_structs.rs  mod.rs  path.rs
kernel/src/idt/: interrupt_impl.rs  mod.rs
kernel/src/memory/: allocator.rs  device_mmu.rs  dma.rs  heap.rs  mod.rs  paging.rs  snmalloc.rs  tls.rs
kernel/src/memory/heap/: allocator.rs  buddylocked.rs  mimalloc.rs  mod.rs
kernel/src/memory/iommu/: amd.rs  domain.rs  intel.rs  mod.rs  page_table.rs
kernel/src/memory/paging/: address_space.rs  constants.rs  frame_alloc.rs  frame_bitmap.rs  layout.rs  map.rs  (+8 more)
kernel/src/profiling/: unwind.rs
kernel/src/scheduling/: domain.rs  executer.rs  executor.rs  fifo_scheduler.rs  global_async.rs  mod.rs  scheduler.rs  state.rs  task.rs  tls.rs
kernel/src/structs/: aligned_buffer.rs  async_future.rs  bench_archive.rs  bounded_mpmc.rs  bounded_wait_queue.rs  channel.rs  completion_queue.rs  condvar.rs  io_request.rs  linked_list.rs  mod.rs  mpmc.rs  per_core_storage.rs  per_cpu_vec.rs  range_tracker.rs  sleep_mutex.rs  stopwatch.rs  thread_pool.rs  treiber_stack.rs  wait_queue.rs
kernel/src/syscalls/: mod.rs  syscall.rs  syscall_impl.rs
kernel/targets/: kernel-elf-winfamily.json
kernel_api/: Cargo.toml
kernel_api/src/: benchmark.rs  dma.rs  fs.rs  irq.rs  lib.rs  memory.rs  pnp.rs  reg.rs  runtime.rs  task.rs  util.rs
kernel_api/src/arch/: mod.rs  x86.rs
kernel_routing/: Cargo.toml
kernel_routing/.cargo/: config.toml
kernel_routing/src/: lib.rs  routing.rs
kernel_routing/src/test/: mod.rs
kernel_stub/: Cargo.toml  build.rs
kernel_stub/src/: main.rs
kernel_stub/src/arch/: mod.rs  x86.rs
kernel_types/: Cargo.toml
kernel_types/src/: arch.rs  async_ffi.rs  async_types.rs  bench_archive.rs  benchmark.rs  device.rs  dma.rs  fdt.rs  fs.rs  io.rs  irq.rs  lib.rs  memory.rs  mpmc_ring.rs  object_manager.rs  pnp.rs  port.rs  request.rs  runtime.rs  status.rs
kernel_types/src/arch/: x86_64.rs
kernel_types/src/test/: async_ffi.rs  async_types.rs  device.rs  dma.rs  fs.rs  io.rs  mod.rs  mpmc_ring.rs  pnp.rs  request.rs  runtime.rs  status.rs
libs/kernel_executor/: Cargo.toml
libs/kernel_executor/src/: global_async.rs  platform.rs
libs/kernel_protocol/: Cargo.toml
libs/kernel_protocol/src/: lib.rs
os/: Cargo.toml  build.rs
os/src/: main.rs
(+260 files in other folders)
