cargo-features = ["profile-rustflags"]


[workspace]
members = [
    "os",
    "kernel_executor",
    "kernel_abi",
    "kernel_stub",
    "kernel_sync",
    "xtask",
]
exclude = ["rustos-api", "kernel", "kernel_api", "kernel_sys", "kernel_types"]
resolver = "2"

[profile.dev]
opt-level = 3
lto = false
codegen-units = 1
panic = "abort"
debug = true

[profile.test]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
