cargo-features = ["profile-rustflags"]


[workspace]
members = ["boot/os", "boot/kernel_stub", "tooling/xtask"]
exclude = ["kernel", "drivers", "libs", "third_party"]
resolver = "2"

[profile.dev]
opt-level = 3
lto = false
codegen-units = 1
panic = "abort"
debug = true

[profile.test]
opt-level = 0

[profile.release]

opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
