cargo-features = ["profile-rustflags"]
[workspace]
members = [
    "acpi",
    "base_driver",
    "disk",
    "fat32",
    "i8042",
    "ide",
    "mountmgr",
    "partmgr",
    "pci",
    "virtio",
    "volmgr",
]
resolver = "2"
[workspace.dependencies]
kernel_api = { path = "../kernel_api", default-features = false, features = [
    "async-ffi-slab",
    "async-ffi-slab-slots-256",
    "async-ffi-slab-slot-bytes-8k",
] }
[profile.dev]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
debug = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
debug = true
