cargo-features = ["profile-rustflags"]
[workspace]
members = [
    "acpi",
    "base_driver",
    "devicetree",
    "disk",
    "fat32",
    "i8042",
    "ide",
    "mountmgr",
    "partmgr",
    "pci",
    "root",
    "virtio",
    "volmgr",
]
resolver = "2"
[workspace.dependencies]
kernel_api = { path = "../kernel_api", default-features = false, features = [
    "arch-x86_64",
    "async-ffi-slab",
    "async-ffi-slab-slots-256",
    "async-ffi-slab-slot-bytes-8k",
] }

[patch.crates-io]
device_tree = { path = "../third_party/device_tree" }

[profile.dev]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
debug = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
debug = true
