[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootloader_api = "0.11.10"
x86_64 = "=0.15.2"
spin = "0.9.8"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
bitflags = "2.6.0"
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"
embedded-crc32c = "0.1"
rand_xoshiro = { version = "0.7.0", default-features = false }
rand_core = "0.9.0"
crc-any = "2.0.0"
embedded-graphics = "0.8.1"
raw-cpuid = "11.5.0"
acpi = "5.2.0"
goblin = { version = "0.10.0", features = [
    "endian_fd",
    "elf64",
    "elf32",
    "pe64",
    "pe32",
    "mach64",
    "mach32",
    "archive",
    "te",
], default-features = false }
hashbrown = "0.15.4"
bincode = { version = "2.0.1", default-features = false, features = [
    "alloc",
    "derive",
] }
toml = { version = "0.9.5", default-features = false, features = ["parse"] }
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
