[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootloader_api = "0.11.10"
x86_64 = "=0.15.2"
spin = "0.10.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
bitflags = "2.6.0"
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"
embedded-crc32c = "0.1"
async-lock = { version = "3.4.0", default-features = false }
rand_xoshiro = { version = "0.7.0", default-features = false }
rand_core = "0.9.0"
crc-any = "2.0.0"
embedded-graphics = "0.8.1"
raw-cpuid = "11.5.0"
acpi = "5.2.0"
goblin = { version = "0.10.0", features = [
    "endian_fd",
    "elf64",
    "elf32",
    "pe64",
    "pe32",
    "mach64",
    "mach32",
    "archive",
    "te",
], default-features = false }
hashbrown = "0.15.4"
bincode = { version = "2.0.1", default-features = false, features = [
    "alloc",
    "derive",
] }
buddy_system_allocator = "0.11.0"
baby-mimalloc = { version = "*", features = ["spin_mutex", "deferred_free"] }
toml = { version = "0.9.5", default-features = false, features = ["parse"] }
kernel_types = { path = "../kernel_types", default-features = false, features = [
    "async-ffi-slab",
    "async-ffi-slab-slots-512",
    "async-ffi-slab-slot-bytes-64k",
] }
kernel_routing = { path = "../kernel_routing", default-features = false, features = [
    "kernel_link",
] }
crossbeam-queue = { version = "0.3.12", default-features = false, features = [
    "alloc",
] }
kernel_executor = { path = "../kernel_executor" }
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
