[package]
name = "kernel_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = [
    "instructions",
] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
acpi = "5.0.0"
spin = "0.10.0"
