[package]
name = "kernel_stub"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "kernel_stub"
path = "src/main.rs"

[dependencies]
bootloader_api = "0.11.10"
goblin = { version = "0.10.0", features = [
    "pe64",
    "pe32",
], default-features = false }
kernel_abi = { path = "../kernel_abi" }
x86_64 = { version = "=0.15.2", default-features = false, features = [
    "instructions",
] }

[build-dependencies]
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-pc-windows-msvc" }
