[package]
name = "OS"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[build-dependencies]
bootloader = { version = "0.11", default-features = false, features = ["uefi"] }

[dependencies]

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
