
[package]
name = "acpi"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "acpi"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
aml = "0.16.4"

spin = { version = "0.10", default-features = false, features = ["mutex"] }
