
[package]
name = "base_driver"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "BASE"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
