
[package]
name = "base_driver"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "base_driver"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
spin = { version = "0.10", default-features = false, features = ["mutex"] }
