
[package]
name = "disk"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "disk"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
bitflags = "2.6.0"
spin = { version = "0.10", default-features = false, features = ["mutex"] }
hashbrown = "0.15"
