[package]
name = "fat32"
version.workspace = true
edition.workspace = true
autotests = false

[lib]
name = "fat32"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[dependencies]
kernel_api.workspace = true
spin.workspace = true
bitflags.workspace = true
fatfs.workspace = true
log.workspace = true
