
[package]
name = "fat32"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "fat32"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
bitflags = "2.6.0"
spin = { version = "0.10", default-features = false, features = ["mutex"] }
fatfs = { default-features = false, git = "https://github.com/rafalh/rust-fatfs", features = [
    "alloc",
    "lfn",
    "unicode",
] }
log = "0.4.28"
