
[package]
name = "fat32"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "fat32"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[package.metadata.rustos-driver]
configuration = "src/fat32.toml"

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
bitflags = "2.6.0"
spin = { version = "0.10", default-features = false, features = ["mutex"] }
fatfs = { path = "../../third_party/rust-fatfs", default-features = false, features = [
    "alloc",
    "lfn",
    "unicode",
] }
log = "0.4.28"
