[package]
name = "root"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "root"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[package.metadata.rustos-driver]
configuration = "src/root.toml"

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
