
[package]
name = "volmgr"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "volmgr"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
bitflags = "2.6.0"
spin = { version = "0.10", default-features = false, features = ["mutex"] }
heapless = { version = "0.9", default-features = false }
