
[package]
name = "volmgr"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
name = "volmgr"
path = "src/lib.rs"
crate-type = ["cdylib"]
test = false

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
kernel_api = { workspace = true }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "spin",
] }
spin = { version = "0.10", default-features = false, features = ["mutex"] }
schnellru = { version = "0.2.4", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = [
    "alloc",
] }
