cargo-features = ["profile-rustflags"]

[package]
name = "driver_test"
version = "0.1.0"
edition = "2024"

[lib]
name = "DRIV"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
