[package]
name = "elf_test"
version = "0.1.0"
edition = "2024"

[dependencies]
rustos-api = { path = "../../rustos-api/" }

[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[[bin]]
name = "TEST"
path = "src/main.rs"