cargo-features = ["profile-rustflags"]

[package]
name = "kernel_executor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
spin = "0.10"
kernel_types = { path = "../kernel_types" }
crossbeam-queue = { version = "0.3.12", default-features = false, features = [
    "alloc",
] }
loom = { version = "0.7", optional = true }

[features]
loom = ["dep:loom"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dev-dependencies]
kernel_types = { path = "../kernel_types", features = ["hosted-tests"] }
threadpool = "1.8"
tokio = { version = "1.45", features = [
    "io-util",
    "net",
    "rt-multi-thread",
    "sync",
] }

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
