cargo-features = ["profile-rustflags"]

[package]
name = "kernel_protocol"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
kernel_types = { path = "../kernel_types" }

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
